deployments/monitoring/prometheus/kubeControllerManagerPrometheusDiscovery.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-controller-manager-prometheus-discovery
  name: kube-controller-manager-prometheus-discovery
  namespace: kube-system
subsets:
- addresses:
  - ip: 192.168.1.18
  ports:
  - name: http-metrics
    port: 10252
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kube-controller-manager
  name: kube-controller-manager-prometheus-discovery
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10252
      targetPort: 10252
  selector:
    component: kube-controller-manager
