deployments/monitoring/prometheus/kubeSchedulerPrometheusDiscovery.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-scheduler-prometheus-discovery
  name: kube-scheduler-prometheus-discovery
  namespace: kube-system
subsets:
- addresses:
  - ip: 192.168.1.18
  ports:
  - name: http-metrics
    port: 10251
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kube-scheduler
  name: kube-scheduler-prometheus-discovery
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10251
      targetPort: 10251
  selector:
    component: kube-scheduler
